# craftIk

./: .gitattributes  .gitignore  .travis.yml  COPYING  Makefile.am  Makefile.in  NEWS  README  README.creole  aclocal.m4  config.h.in  configure  configure.ac
ProcessManager/: Makefile.am  Makefile.in  ProcessManager.c
WatchFox/: Makefile.am  Makefile.in  WatchFox.c
WatchFox/WatchFox.xcodeproj/: project.pbxproj
craftIk.xcodeproj/: project.pbxproj
include/: Makefile.am  Makefile.in  craftik.h  crypt.h  event.h  event_procs.h  init.h  master_procs.h  packet.h  proc_lib.h  process.h  properties.h  rbtree.h  session.h  setting.h  share.h  worker_procs.h
src/: Makefile.am  Makefile.in  craftik.c  crypt.c  epoll.c  event.c  event_procs.c  init.c  master_procs.c  packet.c  proc_lib.c  process.c  properties.c  rbtree.c  session.c  setting.c  worker_procs.c
